--- a/app/[lang]/products/page.module.css
+++ b/app/[lang]/products/page.module.css
@@ -151,7 +151,7 @@
 
 .productGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
 	 gap: 16px;
     margin-bottom: 24px;
 }
